bugfix/cards: paper-shadows were covering the card contents. Whoops!

--- a/web/cards/base_card.scss
+++ b/web/cards/base_card.scss
@@ -1,5 +1,9 @@
 @import "packages/about_me/theme";
 
+paper-shadow {
+  z-index: -1;
+}
+
 :host {
   @extend .center;
   clear: both;
